--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -58,7 +58,9 @@
 
 // ATOMS: Search
 @import "./atoms/search/clear";
+@import "./atoms/search/overlay";
 @import "./atoms/search/input";
+@import "./atoms/search/filter-toggle";
 
 // MOLECULES: Search
 @import "./molecules/search";
