--- a/app/views/tenon/index/index.html.haml
+++ b/app/views/tenon/index/index.html.haml
@@ -1,8 +1,2 @@
-%header
-  %h1 Welcome to Tenon
-
-  .tools
-    = render "tenon/shared/section_header/sidebar_toggle"
-
-.main-content
-  #dashboard-callouts.container
+%main
+  %h1 Index#Index
