main nav and util nav fixes

--- a/app/assets/stylesheets/tenon/atoms/colors/variables.scss
+++ b/app/assets/stylesheets/tenon/atoms/colors/variables.scss
@@ -51,6 +51,7 @@ $main-nav-bg-color: lighten($grey, 10%);
 $main-nav-fg-color: $black;
 $main-nav-hover-color: $grey;
 $app-info-fg-color: $white;
+$app-info-hover-color: rgba($primary-color, .4);
 $app-info-bg-color: rgba(darken($main-nav-bg-color, 20%), .4);
 
 
