some naming convention and client file fixes

--- a/app/assets/stylesheets/client/button-sizes.scss
+++ b/app/assets/stylesheets/client/button-sizes.scss
@@ -1,4 +1,4 @@
 // Override named colors here
 
-// Defined colors can be found here:
-// app/assets/stylesheets/tenon/atoms/colors/names.scss
+// Defined variables can be found here:
+// app/assets/stylesheets/tenon/atoms/buttons/sizes.scss
