--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -8,8 +8,8 @@
 @import "./grid";
 
 // Universal
-@import "./atoms/layout/variables";
-@import "client/layout-sizes";
+@import "./atoms/layout-variables";
+@import "client/layout-variables";
 @import "./atoms/alignment";
 @import "./atoms/lists";
 @import "./atoms/transitions";
