--- a/app/assets/stylesheets/tenon/atoms/transitions.scss
+++ b/app/assets/stylesheets/tenon/atoms/transitions.scss
@@ -1,3 +1,7 @@
 @mixin default-transition {
-  @include transition(all .25s ease);
+  @include transition(all .25s ease 0s);
+}
+
+@mixin main-nav-transition {
+  @include transition(all .2s ease-in-out 0s);
 }
