--- a/app/assets/stylesheets/tenon/organisms/main-nav.scss
+++ b/app/assets/stylesheets/tenon/organisms/main-nav.scss
@@ -1,10 +1,10 @@
 .main-nav {
-  @include transform(translate(-$main-nav-width, 0));
+  @include main-nav-transition;
   @include font-size-smaller;
   position: fixed;
   z-index: $z-layout-main-nav;
   top: $util-nav-height;
-  left: 0;
+  left: -$main-nav-width;
   width: $main-nav-width;
   height: 100%;
   color: $main-nav-fg-color;
@@ -13,6 +13,7 @@
 }
 
 .nav-pusher {
+  @include main-nav-transition;
   position: relative;
   left: 0;
   width: 100%;
@@ -21,7 +22,7 @@
 
 .main-nav-open {
   .main-nav {
-    @include transform(translate(0, 0));
+    left: 0;
   }
 
   .nav-pusher {
