filter drawer implementation and drawer universalisation

--- a/app/assets/stylesheets/tenon/atoms/transitions.scss
+++ b/app/assets/stylesheets/tenon/atoms/transitions.scss
@@ -2,6 +2,6 @@
   @include transition(all .25s ease 0s);
 }
 
-@mixin main-nav-transition {
+@mixin drawer-transition {
   @include transition(all .2s ease-in-out 0s);
 }
