--- a/app/assets/stylesheets/tenon/atoms/z-index.scss
+++ b/app/assets/stylesheets/tenon/atoms/z-index.scss
@@ -1,12 +1,13 @@
 // layout:
-$z-layout-util-nav: 20;
+$z-layout-util-nav: 30;
+$z-layout-toolbar: 40;
 $z-layout-main-nav: 10;
-$z-layout-toolbar: 30;
+$z-layout-filter: 20;
 
 // ui:
 $z-flash-message: 70;
 $z-account: 60;
-$z-nav-toggle: 40;
+$z-nav-toggle: 50;
 $z-kebab-dropdown: 10;
 $z-btn-floating: 10;
 $z-panel-open: 10;
