--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -62,10 +62,11 @@
 @import "./atoms/search/filter-toggle";
 @import "./molecules/search";
 
-// Util nav
-@import "./molecules/util-nav";
-@import "./molecules/util-nav/account";
-@import "./molecules/util-nav/toolbar";
+// Util nav/ toolbar
+@import "./atoms/main-nav-toggle";
+@import "./organisms/account";
+@import "./organisms/toolbar";
+@import "./organisms/util-nav";
 
 // Records
 @import "./molecules/record/list";
@@ -73,10 +74,12 @@
 @import "./molecules/record/details";
 @import "./molecules/record/expanded";
 
-// Main nav & Nav pusher
+// Drawers
+@import "./molecules/drawer";
 @import "./molecules/main-nav/app-info";
 @import "./molecules/main-nav/list";
 @import "./organisms/main-nav";
+@import "./organisms/filters";
 
 // Misc
 @import "./atoms/burger";
