--- a/app/assets/stylesheets/tenon/molecules/search.scss
+++ b/app/assets/stylesheets/tenon/molecules/search.scss
@@ -2,14 +2,14 @@
   position: relative;
   display: inline-block;
   width: 80%;
-  padding: 0;
+  padding: 0 0 0 $default-spacing;
   &:before {
     @extend .ion;
     @include font-size($h3-size);
     position: absolute;
     z-index: $z-quick-search-actions;
     top: 19px;
-    left: $default-spacing/3;
+    left: $default-spacing*1.5;
     display: block;
     content: $ionicon-var-android-search;
     color: $quick-search-fg-color;
@@ -17,6 +17,9 @@
   .actions {
     z-index: $z-quick-search-actions;
     right: $default-spacing/2;
+  }
+  .toolbar-overlay {
+    background-color: $quick-search-overlay-bg-color;
   }
 }
 
