--- a/app/assets/stylesheets/tenon/atoms/toolbar/overlay.scss
+++ b/app/assets/stylesheets/tenon/atoms/toolbar/overlay.scss
@@ -1,13 +1,13 @@
-.search-overlay {
+.toolbar-overlay {
   @include default-transition;
   line-height: $util-nav-height;
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
+  overflow: hidden;
   height: 0;
   padding: 0 $default-spacing;
   content: 0;
   opacity: 0;
-  background-color: darken($white, 10%);
 }
