--- a/app/assets/stylesheets/tenon/atoms/z-index.scss
+++ b/app/assets/stylesheets/tenon/atoms/z-index.scss
@@ -5,12 +5,12 @@ $z-layout-main-nav: 10;
 $z-layout-filter: 20;
 
 // ui:
-$z-flash-message: 70;
-$z-account: 60;
+$z-account: 70;
 $z-nav-toggle: 50;
 $z-kebab-dropdown: 10;
 $z-btn-floating: 10;
 $z-panel-open: 10;
+$z-filters-active: 60;
 $z-quick-search-active: 50;
 $z-quick-search-input: 10;
 $z-quick-search-actions: 20;
