flash messages and some util nav fixes

--- a/app/assets/stylesheets/tenon/molecules/flash-message.scss
+++ b/app/assets/stylesheets/tenon/molecules/flash-message.scss
@@ -1,7 +1,11 @@
 // Flash messages
 .flash {
-  position: relative;
-  padding: $default-spacing/2 $default-spacing;
+  @include z-depth-1;
+  position: absolute;
+  z-index: $z-flash-message;
+  top: $util-nav-height;
+  width: 100%;
+  padding: $default-spacing/3 $default-spacing;
   h2 {
     display: none;
   }
@@ -46,7 +50,7 @@
   position: absolute;
   top: 0;
   right: $default-spacing;
-  padding: $default-spacing/2 0;
+  padding: $default-spacing/3 0;
   text-align: right;
   color: white;
   i {
