--- a/app/assets/stylesheets/tenon/atoms/z-index.scss
+++ b/app/assets/stylesheets/tenon/atoms/z-index.scss
@@ -9,6 +9,7 @@ $z-account: 70;
 $z-nav-toggle: 50;
 $z-kebab-dropdown: 10;
 $z-btn-floating: 10;
+$z-flash-message: 20;
 $z-panel-open: 10;
 $z-filters-active: 60;
 $z-quick-search-active: 50;
