--- a/app/assets/stylesheets/tenon/atoms/layout-variables.scss
+++ b/app/assets/stylesheets/tenon/atoms/layout-variables.scss
@@ -1,11 +1,9 @@
-// Block-Level
-$default-border-radius: 3px;
+// Layout variables:
+$default-border-radius: 4px;
 $default-spacing: 30px;
 $dropdown-item-height: 40px;
-$icon-width: $default-spacing / 3 + 22px;
 $main-nav-width: 260px;
 $main-nav-logo-height: 30px;
-$tool-toggle-size: 32px;
 $toolbar-height: 70px;
 $util-nav-height: 60px;
 $required-dot-size: 6px;
