--- a/app/assets/stylesheets/tenon/organisms/toolbar/open.scss
+++ b/app/assets/stylesheets/tenon/organisms/toolbar/open.scss
@@ -16,7 +16,7 @@
   }
 
   #search {
-    &:before {
+    .search-icon {
       z-index: $z-quick-search-active;
       color: $primary-fg-color;
     }
