--- a/app/assets/stylesheets/tenon/atoms/breadcrumbs.scss
+++ b/app/assets/stylesheets/tenon/atoms/breadcrumbs.scss
@@ -9,23 +9,23 @@
   padding-left: $default-spacing*2.5;
   li {
     @include truncate;
+    line-height: $util-nav-height;
     display: block;
     float: left;
     width: auto;
-    max-width: 50%;
     color: $toolbar-fg-color;
-    &:after {
-      @extend .ion;
-      position: relative;
-      display: inline-block;
-      padding: 0 $default-spacing/2;
-      content: $ionicon-var-ios-arrow-forward;
-      color: $light-border-color;
-    }
-    &:last-of-type:after {
+    &:last-of-type i {
       display: none;
     }
+    i {
+      line-height: $util-nav-height;
+      display: block;
+      float: left;
+      color: $light-border-color;
+    }
     a {
+      display: block;
+      float: left;
       color: $util-nav-fg-color;
     }
   }
