--- a/app/assets/stylesheets/tenon/atoms/typography/font-variables.scss
+++ b/app/assets/stylesheets/tenon/atoms/typography/font-variables.scss
@@ -1,8 +1,11 @@
+// Import icons font(s):
+$font-icon: "Material Icons";
+
 // Import font(s):
-@import "//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic";
+@import "//fonts.googleapis.com/css?family=Roboto:400,400italic,300italic,300,700,700italic";
 
 // Font family:
-$font-sans: "OpenSans", "Helvetica Neue", Helvetica, sans-serif;
+$font-sans: "Roboto", "Helvetica Neue", Helvetica, sans-serif;
 
 // Font family:
 $font-family-body: $font-sans;
