--- a/app/assets/stylesheets/tenon/molecules/dropdown-content.scss
+++ b/app/assets/stylesheets/tenon/molecules/dropdown-content.scss
@@ -25,7 +25,7 @@
       @include font-size-smaller;
       min-height: 0;
       margin-bottom: 0;
-      padding: $default-spacing / 4 $default-spacing / 2;
+      padding: $default-spacing/3 $default-spacing/2;
       &:hover {
         background: none;
       }
@@ -65,10 +65,10 @@
 
     // Icon alignment override
     & > a > i {
-      @include font-size($h4-size);
+      @include font-size($dropdown-icon-size);
       display: inline-block;
       overflow: hidden;
-      width: 22px;
+      width: $dropdown-icon-size * 1px;
       margin-right: $default-spacing / 2;
       text-align: center;
       vertical-align: middle;
