--- a/app/views/tenon/shared/_draft_controls.html.haml
+++ b/app/views/tenon/shared/_draft_controls.html.haml
@@ -1,17 +1,17 @@
 %li.dropdown-label.last-autosave Draft Versions
 %li
   = link_to new_item_version_path(item_type: class_for(obj), item_id: obj.id), data: { modal_remote: true, modal_handler: 'Tenon.features.NewItemVersionHandler', modal_title: 'Save Draft' } do
-    %i.icon.ion-ios-cloud-upload
+    = i('cloud_upload')
     Safe Draft
 
 %li
   = link_to item_versions_path(item_type: obj.class.to_s, item_id: obj.id), data: { modal_remote: true, modal_handler: 'Tenon.features.ItemVersionIndexHandler', modal_title: 'Load Draft' } do
-    %i.icon.ion-ios-cloud-download
+    = i('cloud_download')
     Load Draft
 
 - if params[:version]
   %li
     %a{ href: url_for(version: nil) }
-      %i.icon.ion-ios-star
+      = i('star')
       Load Active Version
 %li.divider
