--- a/spec/dummy/app/views/tenon/shared/_main_nav.html.haml
+++ b/spec/dummy/app/views/tenon/shared/_main_nav.html.haml
@@ -1,12 +1,12 @@
 %ul
-  = nav_item 'Asset Library', assets_path, 'image'
-  = nav_item 'Pages', pages_path, 'ios-paper'
-  = nav_item 'Posts', posts_path, 'ios-paper-outline', active: ['post_categories'].include?(controller_name) do
-    %li= nav_item 'Categories', post_categories_path, active: ['post_categories'].include?(controller_name)
-    %li= nav_item 'Comments', comments_path, active: ['comments'].include?(controller_name)
-  = nav_item 'Users', users_path, 'person-stalker'
-  = nav_item 'Events', events_path, 'calendar'
-  = nav_item 'Galleries', galleries_path, 'images'
+  = nav_item 'Asset Library', assets_path, 'photo_library'
+  = nav_item 'Pages', pages_path, 'description'
+  = nav_item 'Posts', posts_path, 'description', active: ['post_categories'].include?(controller_name) do
+    = nav_item 'Categories', post_categories_path, '', active: ['post_categories'].include?(controller_name)
+    = nav_item 'Comments', comments_path, '', active: ['comments'].include?(controller_name)
+  = nav_item 'Users', users_path, 'supervisor_account'
+  = nav_item 'Events', events_path, 'event'
+  = nav_item 'Galleries', galleries_path, 'photo'
   = nav_item 'Contacts', contacts_path, 'email'
-  = nav_item 'Redirects', redirects_path, 'arrow-swap'
-  = nav_item 'Settings', settings_path, 'gear-a'
+  = nav_item 'Redirects', redirects_path, 'swap_horiz'
+  = nav_item 'Settings', settings_path, 'settings'
