--- a/app/views/tenon/settings/show.html.haml
+++ b/app/views/tenon/settings/show.html.haml
@@ -1,31 +1,11 @@
-- content_for :sidebar do
-  .sidebar
-    .content
-      %h2 Settings
+= form_tag({:action => :update}, :method => "PUT") do
+  .toolbar.bg-color-primary-dk10
+    = render 'tenon/shared/breadcrumbs'
+    .actions
+      - if can?(:publish, @post)
+        %button.action-btn.btn.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
 
-    %h4 Sections
-    %nav
-      %ul
-        %li.active= link_to "General Settings", '#general', data: {toggle: 'tab'}
-        %li= link_to 'Contact Management', '#contact', data: {toggle: 'tab'}
-        %li= link_to 'Search Optimization', '#seo', data: {toggle: 'tab'}
-
-%header
-  %h1 Site Settings
-
-  .tools
-    = render "tenon/shared/section_header/sidebar_toggle"
-
-.main-content
-  = form_tag({:action => :update}, :method => "PUT") do
-    .fields.large.tabs
-      #general.tab-pane.active= render :partial => 'general'
-      #contact.tab-pane= render :partial => 'contact'
-      #seo.tab-pane= render :partial => 'seo'
-
-    .fields.small
-      %h4.box-label Actions
-      .box
-        .content
-          %button.btn.btn-primary.btn-block.submit{ data: { disable_with: "Please wait..." } } Save
-
+  %main
+    = render partial: 'general'
+    = render partial: 'contact'
+    = render partial: 'seo'
