styleguide: colors and color helper classes

--- a/app/assets/stylesheets/tenon/atoms/typography/font-style-mixins.scss
+++ b/app/assets/stylesheets/tenon/atoms/typography/font-style-mixins.scss
@@ -6,14 +6,14 @@
     }
     .font-i#{$i} {
       font-weight: #{$i*100};
-      font-style: normal;
+      font-style: italic;
     }
   }
 }
 
 @include font-style-generators;
 
-// Example usage: 
+// Example usage:
 // @extend font-n4;
 // @extend font-n2;
 // @extend font-n6;
