--- a/app/assets/stylesheets/tenon/molecules/flash-message.scss
+++ b/app/assets/stylesheets/tenon/molecules/flash-message.scss
@@ -22,7 +22,7 @@
     li {
     }
   }
-  &.flash-flash {
+  &.flash {
     color: $warning-text-color;
     background: $warning-background-color;
   }
