--- a/app/views/tenon/styleguides/index.html.haml
+++ b/app/views/tenon/styleguides/index.html.haml
@@ -1,13 +1,13 @@
 %main#styleguide
   %section.styleguide-index
-    %h1 Styleguide
-
+    %h1 Tenon Styleguide
     %p A general summary and guideline for Tenon styles. Variables and styles you change will be reflected here.
 
-    %ul
-      %li= link_to 'Atoms', '#atoms'
-      %li= link_to 'Molecules', '#molecules'
-      %li= link_to 'Organisms', '#organisms'
+    %nav
+      %ul
+        %li= link_to 'Atoms', '#atoms'
+        %li= link_to 'Molecules', '#molecules'
+        %li= link_to 'Organisms', '#organisms'
 
   %section
     = render 'atoms'
